refactor: 금액 관련 예외 메시지 및 출력 포맷 개선